# SQ-Streamhook

./: .gitignore  Cargo.toml  README.md  config.sample.yml
migrations/: 20240619095100_init.down.sql  20240619095100_init.up.sql
src/: auth.rs  cli.rs  config.rs  database.rs  lib.rs  main.rs  server.rs  twitch_api.rs
