[package]
name = "sq_streamhook"
version = "0.1.0"
edition = "2021"

[lib]
name = "sq_streamhook"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "sqlite"] }
reqwest = { version = "0.12.4", features = ["blocking"]}
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"]}
anyhow = "1.0.86"
