[package]
name = "sq_streamhook"
version = "0.1.0"
edition = "2024"
description = "SurvivalQuest's Streamhook Utility"
authors = ["RestedWicked <wicked@radiantware.xyz>"]
readme = "README.md"

[lib]
name = "sq_streamhook"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "sqlite"] }
reqwest = { version = "0.12.4", features = ["blocking"]}
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"]}
anyhow = "1.0.86"
clap = { version = "4.5.34", features = ["color", "derive"] }
rand = "0.9.0"
hyper = { version = "1.6.0", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.11", features = ["server-graceful", "tokio"] }
url = { version = "2.5.4", features = ["serde"] }
pathetic = "0.3.0"
