[package]
name = "sq_streamhook"
version = "0.1.0"
edition = "2024"
description = "SurvivalQuest's Streamhook Utility"
authors = ["RestedWicked <wicked@radiantware.xyz>"]
readme = "README.md"

[lib]
name = "sq_streamhook"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "sqlite"] }
reqwest = { version = "0.12.4" }
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "macros", "sync"] }
anyhow = "1.0.86"
clap = { version = "4.5.34", features = ["color", "derive"] }
rand = "0.9.0"
axum = "0.8.3"
tower-http = { version = "0.6.2", features = ["timeout"] }
serde_yml = "0.0.12"
